@@ -92,6 +92,7 @@ declare -a SOURCES=(
   Tools/build.scala
   Tools/build_console.scala
   Tools/build_doc.scala
+  Tools/check_keywords.scala
   Tools/check_source.scala
   Tools/doc.scala
   Tools/main.scala
